# biotech-affiliation-analyzer

./: README.md  main.py  pyproject.toml
src/get_papers_list/: main.py  pyproject.toml
