[tool.poetry]
name = "pubmed-industry-analyzer"
version = "0.1.0"
description = "Analyze PubMed papers for industry affiliations and collaborations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_industry_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
pandas = "^2.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze-pubmed = "pubmed_industry_analyzer.main:main"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
