[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "A tool to fetch research papers with pharmaceutical/biotech company affiliations from PubMed"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "get_papers_list", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.main:main"
